# panini-nlp

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/: analyze_document.py  analyze_meaning.py  analyze_verse.py  derive_brahman.py  derive_shuklam.py  save_spandakarika_translation.py
panini_nlp/: __init__.py  chandas.py  compression.py  corpus.py  maheshvara.py  meaning.py  morphology.py  samasa.py  sandhi.py  semantics.py  sounds.py  validator.py
panini_nlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
panini_nlp/data/: Ashtadhyayi.txt  Chandas.txt  Dhatupatha.txt  Maheshvara_Sutras.txt  __init__.py
panini_nlp/gnn/: __init__.py  features.py  inference.py  models.py
panini_nlp/models/: __init__.py  layer2_trigger_model.pth  layer3_conflict_model.pth  sanskrit_gnn_mega.pth
panini_nlp/roots/: __init__.py  gana_10_curadi.py  gana_1_bhvadi.py  gana_2_adadi.py  gana_3_juhotyadi.py  gana_4_divadi.py  gana_5_svadi.py  gana_6_tudadi.py  gana_7_rudhadi.py  gana_8_tanadi.py  gana_9_kryadi.py
panini_nlp/rules/: __init__.py  adhyaya_1.py  adhyaya_2.py  adhyaya_3.py  adhyaya_4.py  adhyaya_5.py  adhyaya_6.py  adhyaya_7.py  adhyaya_8.py
panini_nlp/text/: processing.py
scripts/: scaffold_roots.py  scaffold_rules.py
tests/: test_corpus.py  test_meaning.py  test_panini_nlp.py
